force-app/main/default/objects/BMCServiceDesk__Release_CI_Link__c/BMCServiceDesk__Release_CI_Link__c.object-meta.xml
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpCommonLink</customHelpPage>
    <description>Stores linking data between releases and configuration items.</description>
    <label>Release CI Link</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release CI Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>