force-app/main/default/objects/BMCServiceDesk__Release_CI_Link__c/fields/BMCServiceDesk__Class_Name__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Class_Name__c</fullName>
    <description>This field stores the class name of the linked configuration item</description>
    <formula>BMCServiceDesk__FKConfiguration_Item__r.BMCServiceDesk__ClassName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Name</label>
    <type>Text</type>
</CustomField>