force-app/main/default/objects/BMCServiceDesk__Release_CI_Link__c/fields/BMCServiceDesk__FKConfiguration_Item__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKConfiguration_Item__c</fullName>
    <label>Configuration Item</label>
    <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
    <relationshipLabel>Release CI Links</relationshipLabel>
    <relationshipName>Release_CI_Links</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>