force-app/main/default/objects/BMCServiceDesk__Release_CI_Link__c/fields/BMCServiceDesk__FKRelease__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKRelease__c</fullName>
    <label>Release</label>
    <referenceTo>BMCServiceDesk__Release__c</referenceTo>
    <relationshipLabel>Linked Services, Configuration Items and Assets</relationshipLabel>
    <relationshipName>Release_CI_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>