force-app/main/default/objects/BMCServiceDesk__Release_CI_Link__c/fields/BMCServiceDesk__Instance_Name__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Instance_Name__c</fullName>
    <description>This field stores the instance name of the linked configuration item</description>
    <formula>BMCServiceDesk__FKConfiguration_Item__r.BMCServiceDesk__Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instance Name</label>
    <type>Text</type>
</CustomField>